add styles sections professionals and managers

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <section class="professionals">
                 <div class="content">
-                    <span class="cont">Effortless Validation for</span>
+                    <span class="suptitle">Effortless Validation for</span>
                     <h2>Design Professionals</h2>
                     <p>
                         The Myspace page defines the individual, his or her characteristics, traits, personal choices
